--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,11 @@
     <color name="card_background">#FFFFFFFF</color>
     <color name="text_primary">#DE000000</color>
     <color name="text_secondary">#99000000</color>
+    
+    <!-- Metanoia Cosmic Theme -->
+    <color name="cosmic_background">#0A0520</color>
+    <color name="cosmic_purple">#8B7BE8</color>
+    <color name="cosmic_pink">#E94BC7</color>
+    <color name="neon_blue">#4DA6FF</color>
+    <color name="neon_purple">#B84DFF</color>
 </resources>
